updating table and standardizing folder names

--- a/_toc.yml
+++ b/_toc.yml
@@ -1,13 +1,16 @@
-file: README
-sections:
+- file: README
+- file: jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines
+
+- header: Accepted
 - file: 44-xeus-incorporation/xeus-incorporation
 - file: 42-voila-incorporation/voila-incorporation
 - file: 29-jep-process/jep-process
 - file: 28-jupyter-server/jupyter-server
-- file: jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic
-- file: jupyter-dashboards-extension-incorporation/jupyter-dashboards-extension-incorporation
-- file: jupyter-declarativewidgets-incorporation/jupyter-declarativewidgets-extension-incorporation
-- file: jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines
-- file: jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation
-- file: jupyter-kernel-gateway-incorporation/jupyter-kernel-gateway-incorporation
-- file: notebook-diff/notebook-diff
+
+- header: Implemented
+- file: 25-jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation
+- file: 22-jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic
+- file: 18-jupyter-declarativewidgets-incorporation/jupyter-declarativewidgets-extension-incorporation
+- file: 17-jupyter-dashboards-extension-incorporation/jupyter-dashboards-extension-incorporation
+- file: 12-jupyter-kernel-gateway-incorporation/jupyter-kernel-gateway-incorporation
+- file: 08-notebook-diff/notebook-diff
