--- a/_toc.yml
+++ b/_toc.yml
@@ -2,6 +2,7 @@
 - file: jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines
 
 - header: Accepted
+- file: 62-cell-id
 - file: 44-xeus-incorporation/xeus-incorporation
 - file: 42-voila-incorporation/voila-incorporation
 - file: 29-jep-process/jep-process
