--- a/_toc.yml
+++ b/_toc.yml
@@ -1,16 +1,18 @@
 - file: README
 - file: jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines
 
-- header: Accepted
-- file: 44-xeus-incorporation/xeus-incorporation
-- file: 42-voila-incorporation/voila-incorporation
-- file: 29-jep-process/jep-process
-- file: 28-jupyter-server/jupyter-server
+- part: Accepted
+  chapters:
+  - file: 44-xeus-incorporation/xeus-incorporation
+  - file: 42-voila-incorporation/voila-incorporation
+  - file: 29-jep-process/jep-process
+  - file: 28-jupyter-server/jupyter-server
 
-- header: Implemented
-- file: 25-jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation
-- file: 22-jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic
-- file: 18-jupyter-declarativewidgets-incorporation/jupyter-declarativewidgets-extension-incorporation
-- file: 17-jupyter-dashboards-extension-incorporation/jupyter-dashboards-extension-incorporation
-- file: 12-jupyter-kernel-gateway-incorporation/jupyter-kernel-gateway-incorporation
-- file: 08-notebook-diff/notebook-diff
+- part: Implemented
+  chapters:
+  - file: 25-jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation
+  - file: 22-jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic
+  - file: 18-jupyter-declarativewidgets-incorporation/jupyter-declarativewidgets-extension-incorporation
+  - file: 17-jupyter-dashboards-extension-incorporation/jupyter-dashboards-extension-incorporation
+  - file: 12-jupyter-kernel-gateway-incorporation/jupyter-kernel-gateway-incorporation
+  - file: 08-notebook-diff/notebook-diff
