Update toc for new jupyter book

--- a/_toc.yml
+++ b/_toc.yml
@@ -1,12 +1,13 @@
-- file: README
-
-- part: Information
+format: jb-book
+root: README
+parts:
+- caption: Information
   chapters:
   - file: jupyter-enhancement-proposal-guidelines/jupyter-enhancement-proposal-guidelines
   - url: https://github.com/jupyter/enhancement-proposals/blob/master/jupyter-enhancement-proposal-guidelines/JEP-TEMPLATE.md
     title: JEP Template
 
-- part: Accepted JEPs
+- caption: Accepted JEPs
   chapters:
   - file: 62-cell-id/cell-id
   - file: 44-xeus-incorporation/xeus-incorporation
@@ -14,7 +15,7 @@
   - file: 29-jep-process/jep-process
   - file: 28-jupyter-server/jupyter-server
 
-- part: Implemented JEPs
+- caption: Implemented JEPs
   chapters:
   - file: 25-jupyter-enterprise-gateway-incorporation/jupyter-enterprise-gateway-incorporation
   - file: 22-jupyter-dashboards-deployment-attic/jupyter-dashboards-deployment-attic
