--- a/_toc.yml
+++ b/_toc.yml
@@ -9,7 +9,9 @@ parts:
 
 - caption: Accepted JEPs
   chapters:
+  - file: 72-language-server-protocol/language-server-protocol.md
   - file: 62-cell-id/cell-id
+  - file: 47-jupyter-debugger-protocol/jupyter-debugger-protocol.md
   - file: 44-xeus-incorporation/xeus-incorporation
   - file: 42-voila-incorporation/voila-incorporation
   - file: 29-jep-process/jep-process
