--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,7 +4,10 @@ name: deploy-book
 on:
   push:
     branches:
-    - master
+      - master
+  pull_request:
+    branches:
+      - master
 
 # Allow the bot to push to the repository
 permissions:
@@ -23,18 +26,14 @@ jobs:
       with:
         python-version: 3.7
 
-    - name: Install dependencies
+    - name: Build the docs
       run: |
-        pip install -U jupyter-book
-
-
-    # Build the book
-    - name: Build the book
-      run: |
-        jupyter-book build .
+        pip install nox
+        nox -s docs
 
     # Push the book's HTML to github-pages
-    - name: GitHub Pages action
+    - if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+      name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.5.9
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
