--- a/.github/workflows/monthly-jeps-report.yml
+++ b/.github/workflows/monthly-jeps-report.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const issueNumber = 999; // TODO: Update this with the actual issue number
+            const issueNumber = 137;
             
             // Fetch all open pull requests
             const { data: allPRs } = await github.rest.pulls.list({
